// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshot - default 1`] = `
<button
  className="Button-ayg7nk-0 liRzrl"
/>
`;

exports[`Button matches snapshot - large 1`] = `
<button
  className="Button-ayg7nk-0 dSJsyM"
/>
`;

exports[`Button matches snapshot - link 1`] = `
<a
  className="Button-ayg7nk-0 liRzrl"
  href="/"
>
  this is a link
</a>
`;

exports[`Button matches snapshot - medium 1`] = `
<button
  className="Button-ayg7nk-0 liRzrl"
/>
`;

exports[`Button matches snapshot - primary 1`] = `
<button
  className="Button-ayg7nk-0 fFJxez"
/>
`;

exports[`Button matches snapshot - secondary 1`] = `
<button
  className="Button-ayg7nk-0 dYeAnt"
/>
`;

exports[`Button matches snapshot - small 1`] = `
<button
  className="Button-ayg7nk-0 bHTkEr"
/>
`;

exports[`ButtonLink matches snapshot (decorated and disabled) 1`] = `
<button
  className="Button__PlainButton-ayg7nk-2 Button__ButtonLink-ayg7nk-3 Rtfaq"
  disabled={true}
/>
`;

exports[`ButtonLink matches snapshot (decorated) 1`] = `
<button
  className="Button__PlainButton-ayg7nk-2 Button__ButtonLink-ayg7nk-3 flLYdq"
/>
`;

exports[`ButtonLink matches snapshot 1`] = `
<button
  className="Button__PlainButton-ayg7nk-2 Button__ButtonLink-ayg7nk-3 cXLkqS"
/>
`;
